--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,5 +1,7 @@
 // Navigation code here
 nav {
+    position: fixed;
+    width: 100%;
     background-color: @nav-bg;
     padding: 1%;
     text-align: center;
@@ -37,5 +39,6 @@ nav {
     img {
         max-width: 100%;
         border-radius: 5px;
+        padding-top: 10%;
     } //End img
 } //End .center
