--- a/less/variables.less
+++ b/less/variables.less
@@ -13,9 +13,9 @@
 @footer-font-color: @waterloo;
 
 // Color Vars
-@wild-sand: #F6F6F6;
+@wild-sand: #F6F6F685;
 @river-bend: #454A59;
-@sea-shell: #F1F1F1;
+@sea-shell: #F1F1F185;
 @ebony-clay: #23293B;
 @shuttle-gray: #5E6164;
 @porcelain: #F6F7F8;
